# xhs-graphic-note-studio

./: .gitignore  .vercelignore  README.md  index.html  package-lock.json  package.json  vercel.json  一键出图操作台.html  傻瓜一键出图.html  半夏新封面.html  半夏正文出图.html  双击启动操作台.command  双击启动本地排版-Windows.bat  双击启动本地排版-Windows.vbs  双击启动本地排版.command  双击启动网页版-Windows.bat  双击启动网页版-Windows.vbs  双击启动网页版.command  日富一日新封面.html  日富正文出图.html
json/: example.json  宿命感设定-半夏.json  捉奸.json
json/半夏/: 1.json  江湖黑话.json
json/日富/: 对白.json
prompt/prompt/: 内页-半夏.txt  内页-日富.txt  封面-半夏.txt  封面-日富.txt  文本内容-半夏.txt  文本内容-日富.txt
scripts/: generate-cover.js
web/body/: banxia-body.html  richu-body.html
web/studio/: advanced.html  auto.html  index.html  simple.html
web/templates/: banxia-cover.html  richu-cover.html
xhs-render/: README.md  ai_json_prompt_template.txt  custom_styles.example.json  easy_render.py  easy_render_cli.py  job_runner.py  pyproject.toml  render.py  requirements.txt  silent_launcher.applescript  styles.py  test_job_runner.py  test_render.py  web_ui.py
xhs-render/examples/: banxia_example.json  rifu_example.json
双击启动本地排版.app/Contents/: Info.plist
双击启动本地排版.app/Contents/MacOS/: droplet
双击启动本地排版.app/Contents/Resources/: Assets.car
双击启动本地排版.app/Contents/Resources/Scripts/: main.scpt
双击启动本地排版.app/Contents/_CodeSignature/: CodeResources
